# lumin_Refactor

./: .gitattributes  .gitignore  AGENTS.ko.md  AGENTS.md  Cargo.toml  README.md  SDD.md  WORKBOARD.md  deny.toml
.github/workflows/: ci.yml  phase0-pinned-provenance.yml  phase0-static-packaging-binding-closure.yml
architecture/: 000-system-blueprint.md  001-execution-and-ownership.md  002-evidence-and-write-gate.md
crates/analyses/dead-code/: Cargo.toml
crates/analyses/dead-code/src/: lib.rs
crates/application/cli/: Cargo.toml
crates/application/cli/src/: lib.rs  main.rs  retention.rs
crates/application/cli/src/retention/: tests.rs
crates/application/cli/tests/: gate_abandon.rs  publication.rs  publication_concurrency.rs  publication_faults.rs  publication_retention_race.rs  retention.rs  retention_faults.rs  state_namespace.rs  write_gate.rs
crates/application/cli/tests/retention_faults/: support.rs
crates/application/cli/tests/support/: mod.rs  publication.rs  publication_barrier.rs  retention.rs  retention_plan.rs
crates/application/engine/: Cargo.toml
crates/application/engine/src/: gate_abandon.rs  lib.rs  retention.rs  write_gate.rs
crates/application/engine/src/write_gate/: transitions.rs
crates/application/engine/tests/: package_resolution.rs  vue_sfc.rs
crates/application/protocol/: Cargo.toml
crates/application/protocol/src/: cursor.rs  lib.rs  retention.rs
crates/application/protocol/src/retention/: runs.rs  tests.rs
crates/application/store/: Cargo.toml
crates/application/store/src/: gate.rs  generation.rs  lib.rs  namespace.rs  publication.rs  retention.rs
crates/application/store/src/gate/: abandon.rs  coordination.rs  liveness.rs  operations.rs  records.rs  tests.rs
crates/application/store/src/gate/tests/: abandon.rs  liveness.rs
crates/application/store/src/namespace/: bootstrap.rs  database.rs  migration.rs  platform.rs  records.rs  store_header.rs  tests.rs
crates/application/store/src/namespace/migration/: artifacts.rs  snapshot.rs
crates/application/store/src/namespace/migration/snapshot/: tables.rs  validation.rs
crates/application/store/src/namespace/migration/snapshot/validation/: external.rs  retention.rs
crates/application/store/src/namespace/migration/snapshot/validation/retention/: pins.rs  tombstones.rs
crates/application/store/src/namespace/tests/: generation.rs  migration.rs
crates/application/store/src/namespace/tests/migration/: integrity.rs
crates/application/store/src/publication/: barrier.rs  crash.rs  files.rs  latest.rs  liveness.rs  run.rs
crates/application/store/src/publication/liveness/: records.rs  recovery.rs
crates/application/store/src/retention/: confirmation.rs  crash.rs  pins.rs  planning.rs  records.rs  tests.rs
crates/application/store/src/retention/confirmation/: logical.rs  payload.rs
crates/application/store/src/retention/confirmation/payload/: migration.rs  trash.rs
crates/application/store/src/retention/confirmation/payload/trash/: reclaim.rs
crates/application/store/src/retention/planning/: gates.rs  runs.rs
crates/application/store/src/retention/planning/runs/: orphans.rs
crates/application/store/src/retention/records/: validation.rs
crates/application/store/src/retention/tests/: faults.rs  gates.rs  pins.rs
crates/foundation/evidence/: Cargo.toml
crates/foundation/evidence/src/: delta.rs  gate.rs  (+2 more)
crates/foundation/model/: Cargo.toml
crates/graph/resolve/: Cargo.toml
crates/graph/resolve/src/: config.rs  lib.rs  package_surface.rs
crates/graph/resolve/src/package_surface/: exports.rs  fallback.rs  public.rs
crates/graph/symbols/: Cargo.toml
crates/languages/js/: Cargo.toml
crates/languages/js/src/: lib.rs
crates/languages/sfc/: Cargo.toml
crates/source/inventory/: Cargo.toml
crates/source/inventory/src/: config_document.rs  lib.rs  package_semantics.rs  pnpm_workspace.rs  root.rs
reviews/: architecture-v1-adversarial-2026-07-15.md  architecture-v1-independent-verification-2026-07-15.md  grok-build-crate-boundary-reference-2026-07-16.md
reviews/probes/phase0-numeric-target-selection-2026-07-18/: README.md  TARGET-CONTRACT.md
reviews/probes/phase0-oxc-memory-stack-windows-wsl2-x64-2026-07-17/: README.md
reviews/probes/phase0-oxc-memory-stack-windows-wsl2-x64-2026-07-17/source/: .gitignore  Cargo.toml  PROBE-CONTRACT.md  README.md
reviews/probes/phase0-oxc-memory-stack-windows-wsl2-x64-2026-07-17/source/scripts/: package-evidence.py  prepare-corpus.py  run-matrix.py
reviews/probes/phase0-oxc-memory-stack-windows-wsl2-x64-2026-07-17/source/src/: corpus.rs  main.rs  memory.rs  model.rs  probe.rs  util.rs
reviews/probes/phase0-pinned-upstream-provenance-2026-07-18/: README.md  SHA256SUMS
reviews/probes/phase0-static-packaging-windows-wsl2-native-linux-x64-2026-07-18/: README.md  SHA256SUMS
reviews/probes/phase0-static-packaging-windows-wsl2-native-linux-x64-2026-07-18/source/: Cargo.toml  PROBE-CONTRACT.md  SHA256SUMS
reviews/probes/phase0-static-packaging-windows-wsl2-native-linux-x64-2026-07-18/source/scripts/: package_evidence.py  run-linux.sh  run-windows.ps1
reviews/probes/phase0-static-packaging-windows-wsl2-native-linux-x64-2026-07-18/source/src/: main.rs
reviews/probes/phase0-store-backend-native-linux-ext4-musl-x64-2026-07-17/: README.md  runner-provenance.json
reviews/probes/phase0-store-backend-windows-x64-2026-07-17/source/: Cargo.toml  PROBE-CONTRACT.md  README.md  rust-toolchain.toml
reviews/probes/phase0-store-backend-windows-x64-2026-07-17/source/scripts/: collect-build-metrics.ps1  package-evidence.ps1
reviews/probes/phase0-store-backend-windows-x64-2026-07-17/source/src/: backend_contract.rs  benchmark.rs  lifecycle.rs  main.rs  model.rs  namespace.rs  runner.rs  util.rs
reviews/probes/phase0-store-backend-windows-x64-2026-07-17/source/src/backend/: mod.rs  redb_backend.rs  sqlite_backend.rs
specs/: 000-product-contract.md  001-foundation-slice.md  inventory-config-semantics.v1.json  repo-path-semantics.v1.json  resolver-config-semantics.v1.json
문서(한글)/: AGENTS.ko.md  SDD.ko.md
(+286 files in other folders)
