[package]
name = "lumin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "lumin"
path = "src/main.rs"

[dependencies]
lumin-engine = { path = "../engine" }
lumin-model = { path = "../../foundation/model" }
lumin-protocol = { path = "../protocol" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
