[package]
name = "lumin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
retention-test-crash = ["lumin-engine/retention-test-crash"]

[[bin]]
name = "lumin"
path = "src/main.rs"

[[test]]
name = "retention_faults"
path = "tests/retention_faults.rs"
required-features = ["retention-test-crash"]

[dependencies]
lumin-engine = { path = "../engine" }
lumin-model = { path = "../../foundation/model" }
lumin-protocol = { path = "../protocol" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
