[package]
name = "lumin-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
lumin-evidence = { path = "../../foundation/evidence" }
lumin-model = { path = "../../foundation/model" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
