[package]
name = "lumin-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
fs2.workspace = true
getrandom.workspace = true
lumin-evidence = { path = "../../foundation/evidence" }
lumin-model = { path = "../../foundation/model" }
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
