[package]
name = "lumin-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
retention-test-crash = []

[dependencies]
fs2.workspace = true
getrandom.workspace = true
lumin-evidence = { path = "../../foundation/evidence" }
lumin-model = { path = "../../foundation/model" }
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
winapi-util.workspace = true
windows-sys.workspace = true

[dev-dependencies]
lumin-inventory = { path = "../../source/inventory" }

[lints]
workspace = true
