[package]
name = "lumin-resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lumin-model = { path = "../../foundation/model" }
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
