[package]
name = "lumin-inventory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ignore.workspace = true
lumin-model = { path = "../../foundation/model" }
same-file.workspace = true
saphyr-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
winapi-util.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
