[package]
name = "lumin-phase0-static-packaging-probe"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[dependencies]
anyhow = "=1.0.103"
oxc_allocator = "=0.126.0"
oxc_parser = "=0.126.0"
oxc_span = "=0.126.0"
rayon = "=1.11.0"
redb = "=4.1.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[lints.clippy]
await_holding_lock = "deny"
expect_used = "deny"
panic = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"

[lints.rust]
unsafe_code = "deny"
