[package]
name = "lumin-phase0-store-probe"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[features]
default = ["redb-backend", "sqlite-backend"]
redb-backend = ["dep:redb"]
sqlite-backend = ["dep:rusqlite"]

[dependencies]
anyhow = "1.0"
getrandom = "=0.4.3"
redb = { version = "=4.1.0", optional = true }
rusqlite = { version = "=0.39.0", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[lints.clippy]
await_holding_lock = "deny"
expect_used = "deny"
panic = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
